cmake_minimum_required(VERSION 3.5)

project(rtlsdr_radio C)

set(CMAKE_C_STANDARD 11)

set(APPLICATION_NAME "RTL-SDR Radio")

set(APPLICATION_VERSION_MAJOR "0")
set(APPLICATION_VERSION_MINOR "5")
set(APPLICATION_VERSION_PATCH "0")
set(APPLICATION_VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}")

add_compile_options(-Wall -Wextra -pedantic -Werror)
add_compile_options("-D__FILENAME__=__FILE__")

find_package(PkgConfig REQUIRED)

set(RTLSDR_RADIO_LOG_ERROR_ENABLED TRUE CACHE BOOL "Enable ERROR level logging")
set(RTLSDR_RADIO_LOG_WARN_ENABLED TRUE CACHE BOOL "Enable WARN level logging")
set(RTLSDR_RADIO_LOG_INFO_ENABLED TRUE CACHE BOOL "Enable INFO level logging")
set(RTLSDR_RADIO_LOG_DEBUG_ENABLED TRUE CACHE BOOL "Enable DEBUG level logging")
set(RTLSDR_RADIO_LOG_TRACE_ENABLED TRUE CACHE BOOL "Enable TRACE level logging")

set(ENABLED_LOGS)
if (RTLSDR_RADIO_LOG_ERROR_ENABLED)
    list(APPEND ENABLED_LOGS "ERROR")
endif ()
if (RTLSDR_RADIO_LOG_WARN_ENABLED)
    list(APPEND ENABLED_LOGS "WARN")
endif ()
if (RTLSDR_RADIO_LOG_INFO_ENABLED)
    list(APPEND ENABLED_LOGS "INFO")
endif ()
if (RTLSDR_RADIO_LOG_DEBUG_ENABLED)
    list(APPEND ENABLED_LOGS "DEBUG")
endif ()
if (RTLSDR_RADIO_LOG_TRACE_ENABLED)
    list(APPEND ENABLED_LOGS "TRACE")
endif ()

message(STATUS "Log enabled: ${ENABLED_LOGS}")

add_subdirectory(src)
